@@ -436,11 +436,7 @@ probably isn't what you meant.""") %
 
         def exclude_sel_func(path):
             # do not follow symbolic links when checking for file existence!
-            # path.append creates a new path object, which in turn uses setdata
-            # which in turn follows symbolic links...
-            if path.issym():
-                return None
-            if path.append(filename).exists():
+            if path.isdir() and path.append(filename).exists():
                 return 0
             else:
                 return None
